# smart-keep

./: README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: ai_engine.py  auth.py  config.py  main.py  models.py  schemas.py
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: CreateNote.jsx  Layout.jsx  NoteCard.jsx  NotesGrid.jsx
frontend/src/components/ui/: button.jsx  card.jsx  dialog.jsx  dropdown-menu.jsx  input.jsx  textarea.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/lib/: api.js
frontend/src/pages/: Dashboard.jsx  Login.jsx  Register.jsx
